--- a/vue/package.json
+++ b/vue/package.json
@@ -11,7 +11,10 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
+    "nprogress": "^0.2.0",
+    "text-loader": "^0.0.1",
     "vue": "^2.6.14",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
